# PyXDM

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  setup.py
dev/: requirements-dev.txt
examples/: 1-propanethiole.molden.input  acetonitrile.molden.input  api_example.py  api_example_mbis.py  api_example_multiple_schemes.py  benzene.molden.input  m-hydroxybenzaldehyde.molden.input
examples/proatomdb/: proatomdb_wb97x-D3_def2-TZVPP.h5
examples/water/: README.md  postg.hirshfeld.output  postg.mbis.output  pyxdm.output
examples/water/proatomdb/: template.inp
pyxdm/: __init__.py  __main__.py  cli.py  logger.py
pyxdm/core/: __init__.py  core.py  exchange_hole.py  session.py
pyxdm/cpp/: exchange_hole.cpp
pyxdm/grids/: __init__.py  grid.py
pyxdm/partitioning/: __init__.py  partitioning.py
pyxdm/utils/: __init__.py  formatting.py  io.py  logger.py
tests/: __init__.py
